--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "sass": "^1.90.0"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.13.1"
   }
 }
